frontend/src/index.css
body {
  margin: 0;
  height: 100%;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

button {
  margin: 5px;
}

.hidden {
  display: none;
}

.sidebarLink {
  text-decoration: none;
  color: black;
}

.sidebar {
  width: 10%;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 15px;
  border: 1px solid rgba(0, 0, 0, 0.1);
}

.rowSideBySide {
  display: flex;
  flex-direction: row;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

